--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.3",
     "gsap-trial": "^3.10.3",
     "leaflet": "^1.7.1",
     "loaders.css": "^0.1.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.3.0",
